Added functionality for document delete endpoint
